# omop-rag

./: .gitignore  README.md  main.py  pyproject.toml  ui.py
.github/workflows/: lint.yml
data/lab/: acronyms.json  lab_events.csv  matches.csv  similar_results.json
embeddings/lab/: concept_embeddings.pt
src/omop_rag/: best_match.py  create_embeddings.py  pre_process.py  prompt.py  query_data.py  similar_search.py
