[project]
name = "omop-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "holtyad",email = "tom.holt@answerdigital.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "transformers (>=4.56.2,<5.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "torch (>=2.8.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "omop_rag", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
