[project]
name = "omop-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "holtyad",email = "tom.holt@answerdigital.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "transformers (>=4.56.2,<5.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "lmstudio (>=1.5.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "omop_rag", from = "src"}]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
torchaudio = {source = "pytorch"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
